--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,12 +1,11 @@
-
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 body {
   font-family: var(--font-roboto), sans-serif;
+  box-sizing: border-box;
   margin: 0;
   padding: 0;
-  width: 100%;
-  height: 100%;
+  overflow-x: hidden;
 }
